# nomenclator

./: AGENTS.md  ARCHITECTURE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/nomenclator/: __init__.py  agent.py  cli.py  exceptions.py  usage.py
src/nomenclator/models/: __init__.py  chapter.py  classification.py  navigation.py  notes.py  product_facts.py  result.py  rules.py  search.py  usage.py
src/nomenclator/nomenclature/: __init__.py  chapter.py  client.py  notes.py  parser.py  rules.py  tree.py  urls.py  utils.py
src/nomenclator/retrieval/: __init__.py  dense.py  embeddings.py  hybrid.py
src/nomenclator/signatures/: classification_analyst.py  product_analyst.py  research_analyst.py
src/nomenclator/tasks/: classification_analyst.py  product_analyst.py  research_analyst.py
tests/: conftest.py
tests/integration/: test_hs_classification_agent.py  test_hs_tree_navigation.py  test_wco_2022_nomenclature.py
tests/unit/: test_agent.py  test_classification.py  test_context.py  test_hybrid_search.py  test_nomenclature_client.py  test_retrieval.py  test_retriever.py  test_usage.py
